# simple-mobile-robot

./: CMakeLists.txt  README.md  package.xml
config/: controllers.yaml
launch/: controllers.launch.py  display.launch.py  gazebo.launch.py
models/: simple_mobile_robot.sdf
urdf/: simple_robot.urdf  simple_robot.urdf.xacro  test.urdf
worlds/: empty.world  empty_with_sensors.sdf
