<?xml version="1.0"?>
<package format="3">
  <name>simple_mobile_robot</name>
  <version>0.0.1</version>

  <description>
    Simple mobile robot modeled using URDF/Xacro and visualized in RViz2.
  </description>

  <maintainer email="haamia2005@gmail.com">
    Haamia Farooq
  </maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>